--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bulma": "^0.7.1",
     "connected-react-router": "^4.5.0",
     "firebase": "^5.5.3",
+    "jsonwebtoken": "^8.3.0",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
