[Client] Main Page - Part 2: Finding a match

--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-brands-svg-icons": "^5.4.0",
+    "@fortawesome/free-solid-svg-icons": "^5.4.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bulma": "^0.7.1",
     "connected-react-router": "^4.5.0",
     "firebase": "^5.5.3",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.3.0",
     "node-sass": "^4.9.3",
+    "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
