--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^5.5.3",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.9.3",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
