--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bulma": "^0.7.1",
+    "codemirror": "^5.40.2",
     "connected-react-router": "^4.5.0",
     "dotenv": "^6.1.0",
     "dotenv-expand": "^4.2.0",
@@ -19,6 +20,7 @@
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-codemirror2": "^5.1.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
