--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bulma": "^0.7.1",
+    "bulma-timeline": "^3.0.0",
     "codemirror": "^5.40.2",
     "connected-react-router": "^4.5.0",
     "dotenv": "^6.1.0",
