--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.5.2",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.5.2",
+    "react-markdown": "^4.0.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
