--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "redux-logger": "^3.0.6"
   }
 }
